~NEW STUFF~


Raveyard Overhaul:

-The secret raveyard event that has existed in the mod for a while has been overhauled into a more fun party event
-It now has a 1 in 20 chance to occur at the beginning of each night (similarly to blood moons)
-There are no enemies during this event, and it is filled with goofy friendly skeletons that you can talk to
-It now has revamped visuals, with cool light beams swaying back and forth in the background and a color changing skybox
-Added a new suspicious skeleton NPC who sells new strange accessories after each spooky mod boss is defeated, as well as some other things
-Do not commit any wrong-doings infront of the bouncers


New Biome, The Spider Grotto:

-An underground biome that has been taken over by weird spider-like creatures and bugs
-This biome has its own completely unique background (the background will not show up if you have the terraria backgrounds option turned off)
-Like other biomes in the mod, this new biome has a bunch of new content such as weapons, accessories, armors, and a bunch of new enemies and critters
-Also has more new enemies and content in hardmode


New Town NPC, The Old Hunter:

-An ancient skeleton of a once living old hunter is scattered around the spider grotto, it's up to you to put him back together
-You can re-assemble him in the spider grotto by finding his missing pieces, but they are quite scattered
-After all four pieces are assembled, the old hunter will come back to life as a friendly town npc
-He sells various different weapons (especially ranged class weapons) and some other stuff


New Main Menu Overhaul:

-Spooky mods main menu style has been completely overhauled, with an amazing new art piece by Hat in a River depicting all the main biomes and bosses
-This new menu not only looks awesome, but has a few funny little features to go along with it