@@ -133,6 +133,8 @@ PartySkeleton: {
 	Dialogue27: Where do those giant light beams even come from? I dunno either, but it's such a vibe!
 	Dialogue28: I'm the real soul of this party. Being the life of the party? Pathetic!
 	Dialogue29: SHUT UP! my dad works for valve and will use your decomposing corpse for a model texture!
+	Dialogue30: They say I'm debased and bone-pilled.
+	Dialogue31: Transforming from a zomboid into a skeletoid is such a magical thing. We have risen from the lowest and became the most respected!
 }
 
 SkeletonBouncer: {
